Word wrap fix for expanded modules
git-svn-id: https://svn.broadinstitute.org/genepattern/trunk@12635 48a7a3f7-ad46-0410-b969-29950918272e

--- a/website/css/pbj/new-layout.css
+++ b/website/css/pbj/new-layout.css
@@ -139,6 +139,7 @@
     white-space: normal;
     overflow: visible;
     max-height: none;
+    word-wrap: break-word;
 }
 
 /*
